maze.lessons.maze.wallfollower.WallFollowerMaze.scala.error
Escaper:5: error: recursive method keepHandOnRightWall needs result type
    	else if (!(estFaceMur)) {droite();keepHandOnRightWall()}
                                          ^