maze.lessons.maze.wallfollower.WallFollowerMaze.scala.code
override def run() {
    def keepHandOnRightWall() = {
    	if (estFaceMur) {droite()} 
    	else if (!(estFaceMur)) {droite();keepHandOnRightWall()}
    }
    while (!(estSurBiscuit)) {
    	keepHandOnRightWall();
    }
    prendBiscuit();
}
